all the house keeping done

--- a/contactUs.html
+++ b/contactUs.html
@@ -7,12 +7,11 @@
 <body>
 	<header>
 		<div class="navbar">
-	        <ul>
-	          <li><a href="index.html">Home</a></li>
-	          <li><a href="index.html">Members</a></li>
-	          <li><a href="contactUs.html">Contact Us</a></li>
-	        </ul>
-	      </div>
+				<button class ="button-contact button-contact2" 
+				onclick="window.location.href='index.html'" 
+				style="vertical-align:middle">
+			<span>&#127968;</span>	
+			</div>
 	</header>
 	<div class="bg-img2" style="width: 100%">
 			<div class="container" style="opacity: 0.8;">
