--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
 	<header>
 		<div class="navbar">
-	        <ul>
-	          <li><a href="index.html">Home</a></li>
-	          <li><a href="contactUs.html">Contact Us</a></li>
-	        </ul>
+			<button class ="button-contact" 
+					onclick="window.location.href='contactus.html'" 
+					style="vertical-align:middle">
+				<span>&#9993;</span>
+			</button>
 	      </div>
 	</header>
 	<button onclick="topFunction()" id="myBtn" title="Go to top">&uarr;</button>
@@ -61,7 +62,7 @@
 	</div>
 	 <footer>
     	<div class="footer" >
-      		<a href="4.jpg" download><center>Download Company Profile &darr;</center></a>
+      		<a href="4.jpg" download><center>Download Company Profile &#8681;</center></a>
     	</div>
     </footer>
 	<div class="scripts"> 
